# diffusion-ensemble

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.ipynb
src/ensemble/: generate.py  losses.py  models.py  process.py  utils.py  vqgan.py
src/taming/models/: cond_transformer.py  config.py  vqgan.py
src/taming/modules/diffusionmodules/: model.py
src/taming/modules/losses/: lpips.py
src/taming/modules/transformer/: mingpt.py
